<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/back_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        android:padding="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_rectangle2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/play_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20sp"
        app:layout_constraintTop_toBottomOf="@id/back_game" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28sp"
            android:text="@string/draw"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/label_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="34sp"
            tools:text="Something"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28sp"
            android:text="@string/in_25_seconds"
            android:layout_marginTop="2dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:gravity="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:text="Starting in 3 seconds"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_rectangle2"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="14dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:paddingTop="14dp"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="@string/start"
            android:textAllCaps="true"/>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>